test/errors/leak_on_error1.sl
# expect: COMPERROR
1 + "hello";
